--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@
 body{
   min-height: 100vh;
 }
+
+::-webkit-scrollbar {
+  width: 6px;
+  
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #A30F13;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #000000;
+}
